# Vectors

./: CMakeLists.txt  main.cpp
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
